add Screen, SelectField, Loader and more tests

--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -32,6 +32,7 @@
     "submit": "SIGN IN"
   },
   "home": {
+    "title": "Expo Fire Kitten - %{name}",
     "logout": "Sign Out",
     "test": "Test Button"
   }
