--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -34,6 +34,7 @@
   "home": {
     "title": "Expo Fire Kitten - %{name}",
     "logout": "Sign Out",
-    "test": "Test Button"
+    "test": "Test Button",
+    "test2": "Test Message"
   }
 }
